the TokenHighlighter now always appends parentheses for debugging purposes